Progress on tasks API
