# storage/api-docs/api-docs.json
@@ -17,7 +17,7 @@
                     "Tags"
                 ],
                 "summary": "List tags",
-                "description": "Listing of all tags for the current user.",
+                "description": "Listing of all tags of the current user.",
                 "operationId": "05429641ff2d4731ad9bc60b1c0e138c",
                 "responses": {
                     "200": {
@@ -75,12 +75,12 @@
                                 "properties": {
                                     "name": {
                                         "description": "Name of the tag",
-                                        "format": "string",
+                                        "type": "string",
                                         "example": "Personal"
                                     },
                                     "color": {
                                         "description": "Color of the tag in hex format",
-                                        "format": "string",
+                                        "type": "string",
                                         "example": "#0066aa"
                                     }
                                 },
@@ -159,12 +159,12 @@
                                 "properties": {
                                     "name": {
                                         "description": "Name of the tag",
-                                        "format": "string",
+                                        "type": "string",
                                         "example": "Other"
                                     },
                                     "color": {
                                         "description": "Color of the tag in hex format",
-                                        "format": "string",
+                                        "type": "string",
                                         "example": "#a66666"
                                     }
                                 },
@@ -295,6 +295,133 @@
                     },
                     "404": {
                         "$ref": "#/components/responses/NotFound"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/task": {
+            "get": {
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "List tasks",
+                "description": "Listing of all tasks of the current user.",
+                "operationId": "a6414b92dfc277535c00935788507b36",
+                "responses": {
+                    "200": {
+                        "description": "Listed tasks",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Task"
+                                            }
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": ""
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Tasks"
+                ],
+                "summary": "Create new task",
+                "description": "Create new task for the current user.",
+                "operationId": "ebdc575ef133bfb05ef92a8e84f54da8",
+                "requestBody": {
+                    "description": "Task object that needs to be added to the store",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "targeted_at"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "Name of the new task",
+                                        "type": "string",
+                                        "example": "New task"
+                                    },
+                                    "targeted_at": {
+                                        "description": "Date-time on which is task targeted.",
+                                        "type": "string",
+                                        "format": "date-time",
+                                        "example": "2026-01-02 13:45:56"
+                                    },
+                                    "fulfilled_at": {
+                                        "description": "Date-time on which was task fulfilled.",
+                                        "type": "string",
+                                        "format": "date-time",
+                                        "example": "2026-01-02 13:46:00"
+                                    },
+                                    "status": {
+                                        "$ref": "#/components/schemas/TaskStatusEnum"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Task created successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/Task"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Task created successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/Unauthenticated"
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/ValidationError"
                     }
                 },
                 "security": [
@@ -530,6 +657,15 @@
     },
     "components": {
         "schemas": {
+            "TaskStatusEnum": {
+                "type": "string",
+                "enum": [
+                    "ONGOING",
+                    "FINISHED",
+                    "POSTPONED",
+                    "CANCELED"
+                ]
+            },
             "Tag": {
                 "title": "Tag",
                 "description": "Single task's tag",
@@ -539,18 +675,64 @@
                 "properties": {
                     "id": {
                         "description": "Unique identifier",
+                        "type": "integer",
                         "format": "int64",
                         "example": 1
                     },
                     "name": {
                         "description": "Name of the tag",
-                        "format": "string",
+                        "type": "string",
                         "example": "Personal"
                     },
                     "color": {
                         "description": "Color of the tag in hex format",
                         "format": "string",
                         "example": "#0066aa"
+                    }
+                },
+                "type": "object"
+            },
+            "Task": {
+                "title": "Task",
+                "description": "Single task",
+                "required": [
+                    "name",
+                    "targeted_at"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "Unique identifier",
+                        "type": "integer",
+                        "format": "int64",
+                        "example": 1
+                    },
+                    "name": {
+                        "description": "Name of the task",
+                        "type": "string",
+                        "example": "Personal"
+                    },
+                    "targeted_at": {
+                        "description": "Date-time to when is task targeted",
+                        "type": "string",
+                        "format": "date-time"
+                    },
+                    "fulfilled_at": {
+                        "description": "Date-time to when was task fulfilled",
+                        "type": "string",
+                        "format": "date-time",
+                        "nullable": true
+                    },
+                    "status": {
+                        "description": "Current status of the task (`ongoing`, `finished`, `postponed`, `canceled`)",
+                        "type": "string",
+                        "example": "ongoing"
+                    },
+                    "tags": {
+                        "description": "Tags attached to the task.",
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/Tag"
+                        }
                     }
                 },
                 "type": "object"
@@ -691,7 +873,11 @@
     "tags": [
         {
             "name": "Tags",
-            "description": "Tasks tags API"
+            "description": "Tags API"
+        },
+        {
+            "name": "Tasks",
+            "description": "Tasks API"
         },
         {
             "name": "Users",
